--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -12,4 +12,4 @@ jobs:
       - uses: actions/setup-go@v2
         with:
           go-version: '^1.15.1' # The Go version to download (if necessary) and use.
-      - run: go version
+      - run: go build -o hello .
