Add examples for buildevents

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -23,7 +23,22 @@ jobs:
       - uses: actions/checkout@v2
         name: checkout
       - uses: actions/setup-go@v2
-        name: go-build
+        name: go-setup
         with:
           go-version: '^1.15.1' # The Go version to download (if necessary) and use.
+      - run: |
+          echo "STEP_ID=0" >> $GITHUB_ENV
+          echo "STEP_START=$(date +%s)" >> $GITHUB_ENV
+      - run: |
+          buildevents cmd $TRACE_ID $STEP_ID sleep -- sleep 5
+      - run: |
+          buildevents step $TRACE_ID $STEP_ID $STEP_START 'step 1'
+      - run: |
+          echo "STEP_ID=1" >> $GITHUB_ENV
+          echo "STEP_START=$(date +%s)" >> $GITHUB_ENV
+      - run: |
+          buildevents cmd $TRACE_ID $STEP_ID 'sleep some more' -- sleep 2
+      - run: |
+          buildevents step $TRACE_ID $STEP_ID $STEP_START 'step 2'
       - run: go build -o hello .
+
